Add theta-sim (idk man)

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -339,6 +339,133 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "\n",
+    "th_series_thsim, th_d_series_thsim, th_dd_series_thsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_series_thsim, q_d_series_thsim, q_dd_series_thsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "Y_series_thsim = torch.empty((0,4)).to(device)\n",
+    "v_series_thsim = torch.empty((0,1)).to(device)\n",
+    "u_series_thsim = torch.empty((0,1)).to(device)\n",
+    "\n",
+    "\n",
+    "dt = 0.01\n",
+    "t_end = 5\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
+    "\n",
+    "th = th_start\n",
+    "th_d = th_d_start\n",
+    "\n",
+    "th_thsim = th_start\n",
+    "th_d_thsim = th_d_start\n",
+    "\n",
+    "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
+    "\n",
+    "for t in torch.arange(0, t_end, dt):\n",
+    "    t_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "    print(t_string, end='\\r', flush=True)\n",
+    "\n",
+    "    #print(\"th:\", th)\n",
+    "    #print(\"th_d:\", th_d)\n",
+    "\n",
+    "    q_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "    q_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "    \n",
+    "    \"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "\n",
+    "    is_clockwise = transforms.check_clockwise(q_hat.squeeze(0))\n",
+    "    \n",
+    "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "    J_h = model.jacobian_enc(q_hat)\n",
+    "    J_h_trans = torch.transpose(J_h, 0, 1)\n",
+    "\n",
+    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
+    "    G_q_est = dynamics.add_spring_force_G_q(rp, q_hat, G_q_est, k_spring)\n",
+    "    A_q_est = dynamics.input_matrix(rp, q_hat.squeeze(0))\n",
+    "\n",
+    "\n",
+    "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "    M_th = torch.tensor([[rp[\"m2\"], 0.], [0., rp[\"m2\"]*th_start[0,0]**2]]).to(device).requires_grad_(True)\n",
+    "    M_th = M_th * th/th\n",
+    "    C_th = torch.tensor([[0, 0.], [0., 0.]]).to(device).requires_grad_(True)\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "\n",
+    "\n",
+    "    Y = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
+    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #print(\"alpha:\", alpha)\n",
+    "    #print(\"beta:\", beta)\n",
+    "    v = normal_form.calculate_v(Y, Y_des, K)\n",
+    "    u = normal_form.calculate_u(alpha, beta, v)\n",
+    "    #print(\"Y:\", Y)\n",
+    "\n",
+    "    #print(\"u:\", u)\n",
+    "    if t == 0:\n",
+    "        print(\"th:\", th)\n",
+    "        print(\"Y:\", Y)\n",
+    "        print(\"Y_des:\", Y_des)\n",
+    "        print(\"v:\", v)\n",
+    "\n",
+    "    \"\"\" Recalculate \"real system\" based on modified matrices in theta-space. \"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    tau_th = A_th * u\n",
+    "    th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ ((th_d).T)- G_th)).T\n",
+    "    th_d = th_d + th_dd * dt\n",
+    "    th = th + th_d * dt\n",
+    "\n",
+    "    if th[0,0] < 0:\n",
+    "        th[0,0] = -th[0,0]\n",
+    "        th[0,1] += torch.pi\n",
+    "    \n",
+    "    if th[0,1] > torch.pi:\n",
+    "        th[0,1] -= 2*torch.pi\n",
+    "    if th[0,1] < -torch.pi:\n",
+    "        th[0,1] += 2*torch.pi\n",
+    "\n",
+    "    q_est = model.decoder_vmap(th, clockwise=is_clockwise)\n",
+    "    q_est = transforms.wrap_to_pi(q_est)\n",
+    "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \"\"\" Store data for plotting \"\"\"\n",
+    "\n",
+    "    th_series_thsim = torch.cat((th_series_thsim, th.detach()), dim=0)\n",
+    "    th_d_series_thsim = torch.cat((th_d_series_thsim, th_d.detach()), dim=0)\n",
+    "    th_dd_series_thsim = torch.cat((th_dd_series_thsim, th_dd.detach()), dim=0)\n",
+    "\n",
+    "    q_series_thsim = torch.cat((q_series_thsim, q_est.detach()), dim=0)\n",
+    "    q_d_series_thsim = torch.cat((q_d_series_thsim, q_d_est.detach()), dim=0)\n",
+    "\n",
+    "    v_series_thsim = torch.cat((v_series_thsim, v.detach()), dim=0)\n",
+    "    u_series_thsim = torch.cat((u_series_thsim, u.detach()), dim=0)\n",
+    "    Y_series_thsim = torch.cat((Y_series_thsim, Y.detach().T))\n",
+    "    #print(\"\")\n",
+    "\n",
+    "    if torch.isnan(th[0,0]):\n",
+    "        break\n",
+    "\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
