--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -462,6 +462,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sim in Y-space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_hat_start = model.decoder(th_start, is_clockwise_start)\n",
+    "q_d_hat_start = (model.jacobian_dec(th_start, is_clockwise_start) @ th_d_start.T).T\n",
+    "M_q_start, C_q_start, G_q_start = dynamics.dynamical_matrices(rp, q_hat_start.squeeze(0), q_d_hat_start.squeeze(0))\n",
+    "\n",
+    "print(\"th_start:\", th_start)\n",
+    "print(\"th_d_start:\", th_d_start)\n",
+    "\n",
+    "\n",
+    "J_h_inv_start = model.jacobian_dec(th_start, is_clockwise_start).squeeze(0)\n",
+    "J_h_inv_trans_start = torch.transpose(J_h_inv_start, 0, 1)\n",
+    "\n",
+    "M_th_start, C_th_start, G_th_start = transforms.transform_dynamical_from_inverse(M_q_start, C_q_start, G_q_start, th_start, \n",
+    "                                                                                 th_d_start, J_h_inv_start, J_h_inv_trans_start)\n",
+    "\n",
+    "M_th_start = torch.tensor([[rp[\"m2\"], 0.], [0., rp[\"m2\"]*th_start[0,0]**2]]).to(device).requires_grad_(True)\n",
+    "M_th_start = M_th_start * th_start/th_start\n",
+    "C_th_start = torch.tensor([[0, 0.], [0., 0.]]).to(device).requires_grad_(True)\n",
+    "C_th_start = C_th_start * th_start/th_start\n",
+    " \n",
+    "print(\"M_th_s:\", M_th_start)\n",
+    "print(\"C_th_s:\", C_th_start)\n",
+    "print(\"G_th_s:\", G_th_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_series_Ysim = torch.empty((0,4)).to(device)\n",
+    "v_series_Ysim = torch.empty((0,1)).to(device)\n",
+    "K = torch.tensor([[10., 100., 100., 100.]]).to(device)\n",
+    "Y = normal_form.calculate_Y(th_start, th_d_start, M_th_start, G_th_start, device)\n",
+    "\n",
+    "t_end = 10.\n",
+    "dt = 0.01\n",
+    "\n",
+    "Y_A = torch.tensor([[0., 1., 0., 0.],\n",
+    "                    [0., 0., 1., 0.],\n",
+    "                    [0., 0., 0., 1.],\n",
+    "                    [0., 0., 0., 0.]]).to(device)\n",
+    "\n",
+    "Y_B = torch.tensor([[0.], [0.], [0.], [1.]]).to(device)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for t in torch.arange(0, t_end, dt):\n",
+    "    v = normal_form.calculate_v(Y, Y_des, K)\n",
+    "    \n",
+    "\n",
+    "    Y_series_Ysim = torch.cat((Y_series_Ysim, Y.detach().T))\n",
+    "\n",
+    "    Y_dot = Y_A @ Y + Y_B * v\n",
+    "    Y = Y + Y_dot * dt\n",
+    "    \n",
+    "    v_series_Ysim = torch.cat((v_series_Ysim, v.detach()))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
