--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -539,6 +539,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "show_thsim = True\n",
+    "show_Ysim = True\n",
+    "\n",
+    "if show_thsim:\n",
+    "    plot_quad_vs_time(Y_series_thsim[:130], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-3, 3))\n",
+    "    plot_single_vs_time(v_series_thsim[:130], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-10, 150))\n",
+    "    #plot_single_vs_time(u_series_thsim[:130], dt, \"u_thsim\", \"u_thsim vs time\")\n",
+    "    plot_double_vs_time(th_series_thsim[:130], dt, \"th_thsim\", \"th_thsim vs time\", (-2, 6))\n",
+    "    #plot_double_vs_time(q_series_thsim[:130], dt, \"q_thsim\", \"q_thsim vs time\")\n",
+    "\n",
+    "if show_Ysim:\n",
+    "    plot_quad_vs_time(Y_series_Ysim[:130], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-3, 3))\n",
+    "    plot_single_vs_time(v_series_Ysim[:130], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-10, 150))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
