Change Y_des calculation to skew to reachable state

--- a/Kian_code/Two_Block/two_block_sim.ipynb
+++ b/Kian_code/Two_Block/two_block_sim.ipynb
@@ -300,13 +300,10 @@
     "th_des = torch.tensor([[3., 5.]])\n",
     "th_d_des = torch.tensor([[0., 0.]])\n",
     "\n",
-    "Y_des = calculate_Y(rp_b, th_des.squeeze(0), th_d_des.squeeze(0))\n",
-    "Y_test = calculate_Y(rp_b, th_start.squeeze(0), th_d_start.squeeze(0))\n",
-    "alpha_test, beta_test = calculate_alpha_beta(rp_b, th_start.squeeze(0), th_d_start.squeeze(0))\n",
-    "v_test = calculate_v(Y_test, Y_des, K)\n",
-    "u_test = calculate_u(alpha_test, beta_test, v_test)\n",
-    "\n",
-    "print(Y_des)\n"
+    "Y_des_u = calculate_Y(rp_b, th_des.squeeze(0), th_d_des.squeeze(0))\n",
+    "Y_des = torch.tensor([[Y_des_u[0,0]], [0.], [0.], [0.]])\n",
+    "print(\"Y_des_u:\", Y_des_u)\n",
+    "print(\"Y_des:\", Y_des)"
    ]
   },
   {
