--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -72,21 +72,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mask_points(q1_split, clockwise = False):\n",
+    "def mask_points(q0_split, clockwise = False):\n",
     "\n",
     "    \"\"\"\n",
-    "    Returns a set of [q1, q2] points based on \"q1_split\" limits on q1 and q2.\n",
-    "    The limits on q2 depend on whether a clockwise or counterclockwise dataset is selected.\n",
+    "    Returns a set of [q0, q1] points based on \"q0_split\" limits on q0 and q1.\n",
+    "    The limits on q1 depend on whether a clockwise or counterclockwise dataset is selected.\n",
     "    \"\"\"   \n",
     "\n",
     "    # Retrieve training points\n",
     "    points = training_data.points.to(device)\n",
     "    \n",
     "    # Mask to retrieve only the counterclockwise points\n",
-    "    width_mask = (points[:,0] >= q1_split[0]) & (points[:,0] <= q1_split[1])\n",
+    "    width_mask = (points[:,0] >= q0_split[0]) & (points[:,0] <= q0_split[1])\n",
     "    ccw_mask = ((points[:,1] >= points[:,0]) & \n",
-    "                  (points[:,1] <= points[:,0] + torch.pi)) #| ((points[:,1] >= points[:,0] - 2*torch.pi) &\n",
-    "                  #(points[:,1] <= points[:,0] - torch.pi))\n",
+    "                  (points[:,1] <= points[:,0] + torch.pi))\n",
     "    \n",
     "    # Mask to retrieve only the clockwise points\n",
     "    cw_mask = ((points[:,1] >= points[:,0] - torch.pi) & (points[:,1] <= points[:,0]))\n",
@@ -120,9 +119,9 @@
     "    \n",
     "   plt.figure(figsize=(6, 6))\n",
     "   plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
-    "   plt.title('Scatter Plot of q1 vs q2')\n",
-    "   plt.xlabel('q1')\n",
-    "   plt.ylabel('q2')\n",
+    "   plt.title('Scatter Plot of q0 vs q1')\n",
+    "   plt.xlabel('q0')\n",
+    "   plt.ylabel('q1')\n",
     "   plt.xlim(-2*torch.pi, 2*torch.pi)\n",
     "   plt.ylim(-2*torch.pi, 2*torch.pi)\n",
     "   plt.grid(True)\n",
@@ -289,7 +288,7 @@
     "#model.load_state_dict(torch.load(load_path, weights_only=True))\n",
     "\n",
     "\n",
-    "def train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
+    "def train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
     "\n",
     "    \"\"\"\n",
     "    Executes training loop for Autoencoder\n",
@@ -325,8 +324,8 @@
     "    nn_filename = dir_name + \"_\" + str(file_counter) + \".pth\"\n",
     "    nn_filepath = os.path.join(dir_path, nn_filename)\n",
     "\n",
-    "    metadata = {\"q1_low\" : q1_split[0],\n",
-    "                \"q1_high\" : q1_split[1],\n",
+    "    metadata = {\"q0_low\" : q0_split[0],\n",
+    "                \"q0_high\" : q0_split[1],\n",
     "                \"lr\" : lr,\n",
     "                \"epochs\" : num_epochs,\n",
     "                \"file_name\" : nn_filename,\n",
@@ -552,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q1_split = (-torch.pi, torch.pi)\n",
+    "q0_split = (-torch.pi, torch.pi)\n",
     "batch_size = 512\n",
     "train_part = 0.7\n",
     "\n",
@@ -569,12 +568,12 @@
     "\n",
     "current_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
     "\n",
-    "shifted_points = mask_points(q1_split, clockwise=train_clockwise)\n",
+    "shifted_points = mask_points(q0_split, clockwise=train_clockwise)\n",
     "\n",
     "dataset = make_dataset(shifted_points)\n",
     "(train_dataloader, val_dataloader) = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
     "outputs = []\n",
-    "model, train_losses, val_losses, dir_path, nn_filepath, file_counter = train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, \n",
+    "model, train_losses, val_losses, dir_path, nn_filepath, file_counter = train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, \n",
     "                                                        val_dataloader, current_time, existing_model_name)"
    ]
   },
@@ -600,30 +599,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def theta_1_single(model, q):\n",
+    "def theta_0_single(model, q):\n",
     "    print(\"q:\", q.size())\n",
     "    theta = model.encoder(q)\n",
     "    print(\"theta:\", theta.size())\n",
     "    return theta[:, 0].detach()\n",
     "    \n",
-    "def theta_2_single(model, q):\n",
+    "def theta_1_single(model, q):\n",
     "    theta = model.encoder(q)\n",
     "    return theta[:, 1].detach()\n",
     "    \n",
-    "def q_hat_1_single(model, theta):\n",
+    "def q_hat_0_single(model, theta):\n",
     "    q_hat = model.decoder(theta)\n",
     "    return q_hat[:, 0].detach()\n",
     "    \n",
-    "def q_hat_2_single(model, theta):\n",
+    "def q_hat_1_single(model, theta):\n",
     "    q_hat = model.decoder(theta)\n",
     "    return q_hat[:, 1].detach()\n",
     "\n",
-    "mapping_functions = (partial(theta_1_single,model), \n",
-    "                        partial(theta_2_single,model), \n",
-    "                        partial(q_hat_1_single,model), \n",
-    "                        partial(q_hat_2_single,model))\n",
+    "mapping_functions = (partial(theta_0_single,model), \n",
+    "                        partial(theta_1_single,model), \n",
+    "                        partial(q_hat_0_single,model), \n",
+    "                        partial(q_hat_1_single,model))\n",
     "th_plotter = theta_visualizer.theta_plotter(rp=rp, n_lines=50, device=device, \n",
-    "                                            mapping_functions=mapping_functions, mask_split=q1_split)\n",
+    "                                            mapping_functions=mapping_functions, mask_split=q0_split)\n",
     "theta_figure_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".png\")\n",
     "th_plotter.make_figure(theta_figure_path)\n",
     "theta_anim_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".mp4\")\n",
@@ -641,12 +640,12 @@
     "\n",
     "folder_path = os.path.join(dir_path, \"performance_plots_\" + str(file_counter))\n",
     "\n",
-    "q1_split = (-torch.pi, torch.pi)\n",
+    "#q0_split = (-torch.pi, torch.pi)\n",
     "plt.ion()\n",
     "#model = autoencoders.Autoencoder_double(rp).to(device)\n",
     "#model_location = 'Models/Split_AEs/Lumped_Mass_202503051257.pth'\n",
     "#model.load_state_dict(torch.load(model_location, weights_only=True))\n",
-    "plot_points = mask_points(q1_split, clockwise = train_clockwise)\n",
+    "plot_points = mask_points(q0_split, clockwise = train_clockwise)\n",
     "plot_dataset = make_dataset(plot_points)\n",
     "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
     "plot_model_performance(model, plot_dataloader, folder_path)\n"
@@ -673,18 +672,18 @@
     "\n",
     "def check_clockwise_vectorized(q):\n",
     "    \"\"\"\n",
-    "    Expects q to be a tensor of shape (N,2) where each row is [q1, q2].\n",
+    "    Expects q to be a tensor of shape (N,2) where each row is [q0, q1].\n",
     "    Returns two boolean masks: (cw_mask, ccw_mask), where:\n",
     "      - cw_mask[i] is True if the i-th configuration is elbow clockwise.\n",
     "      - ccw_mask[i] is True if the i-th configuration is elbow counterclockwise.\n",
     "    \n",
     "    The logic is as follows (from your original function):\n",
-    "      If q2 lies between q1 and q1+π, or between q1-2π and q1-π, then the configuration\n",
+    "      If q1 lies between q0 and q0+π, or between q0-2π and q0-π, then the configuration\n",
     "      is considered counterclockwise. Otherwise it is clockwise.\n",
     "    \"\"\"\n",
-    "    q1 = q[:, 0]\n",
-    "    q2 = q[:, 1]\n",
-    "    cond_ccw = ((q2 >= q1) & (q2 <= q1 + torch.pi))\n",
+    "    q0 = q[:, 0]\n",
+    "    q1 = q[:, 1]\n",
+    "    cond_ccw = ((q1 >= q0) & (q1 <= q0 + torch.pi))\n",
     "    cw_mask = ~cond_ccw\n",
     "    ccw_mask = cond_ccw\n",
     "    return cw_mask, ccw_mask\n",
@@ -693,23 +692,23 @@
     "# Define the number of grid points along each dimension.\n",
     "n_points = 200\n",
     "\n",
-    "# Create 1D tensors for q1 and q2 in the range [-pi, 0]\n",
-    "q1_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
-    "q2_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
+    "# Create 1D tensors for q0 and q1 in the range [-pi, 0]\n",
+    "q0_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "q1_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
     "\n",
     "# Create a 2D grid (meshgrid) of q values.\n",
-    "# (Note: using indexing='ij' so that the first axis corresponds to q1 and the second to q2)\n",
-    "q1_grid, q2_grid = torch.meshgrid(q1_vals, q2_vals, indexing='ij')\n",
+    "# (Note: using indexing='ij' so that the first axis corresponds to q0 and the second to q1)\n",
+    "q0_grid, q1_grid = torch.meshgrid(q0_vals, q1_vals, indexing='ij')\n",
     "\n",
     "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
-    "q_grid = torch.stack([q1_grid.flatten(), q2_grid.flatten()], dim=1).to(device)\n",
+    "q_grid = torch.stack([q0_grid.flatten(), q1_grid.flatten()], dim=1).to(device)\n",
     "\n",
-    "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
+    "# === Compute theta0 and theta1 using the analytic encoder functions ===\n",
     "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
-    "# Note: encoder_theta_1_ana and encoder_theta_2_ana each return a tuple (theta, theta).\n",
+    "# Note: encoder_theta_0_ana and encoder_theta_1_ana each return a tuple (theta, theta).\n",
     "\n",
     "if train_clockwise:\n",
-    "    raise ValueError(\"This plotter currently only supports plotting counterclockwise performance. Should ben an easy fix\")\n",
+    "    raise ValueError(\"This plotter currently only supports plotting counterclockwise performance. Should be an easy fix\")\n",
     "\n",
     "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(10, 8.5))\n",
@@ -718,8 +717,8 @@
     "    theta_out = model.encoder_vmap(q_grid)\n",
     "    #theta_out = torch.vmap(model.encoder)(q_grid)\n",
     "\n",
-    "    theta1 = theta_out[:, 0]\n",
-    "    theta2 = theta_out[:, 1]\n",
+    "    theta0 = theta_out[:, 0]\n",
+    "    theta1 = theta_out[:, 1]\n",
     "\n",
     "    # Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
     "    x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
@@ -730,9 +729,9 @@
     "    # Counterclockwise points\n",
     "    x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
     "    y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "    theta0_ccw  = theta0[ccw_mask].detach().cpu().numpy()\n",
     "    theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
-    "    theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
-    "    thetas = [theta1_ccw, theta2_ccw]\n",
+    "    thetas = [theta0_ccw, theta1_ccw]\n",
     "\n",
     "\n",
     "    for j in range(2):\n",
