--- a/Kian_code/Series_Elastic_Actuator/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learn Transform_SEA.ipynb
@@ -72,21 +72,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mask_points(q1_split, clockwise = False):\n",
+    "def mask_points(q0_split, clockwise = False):\n",
     "\n",
     "    \"\"\"\n",
-    "    Returns a set of [q1, q2] points based on \"q1_split\" limits on q1 and q2.\n",
-    "    The limits on q2 depend on whether a clockwise or counterclockwise dataset is selected.\n",
+    "    Returns a set of [q0, q1] points based on \"q0_split\" limits on q0 and q1.\n",
+    "    The limits on q0 depend on whether a clockwise or counterclockwise dataset is selected.\n",
     "    \"\"\"   \n",
     "\n",
     "    # Retrieve training points\n",
     "    points = training_data.points.to(device)\n",
     "    \n",
     "    # Mask to retrieve only the counterclockwise points\n",
-    "    width_mask = (points[:,0] >= q1_split[0]) & (points[:,0] <= q1_split[1])\n",
+    "    width_mask = (points[:,0] >= q0_split[0]) & (points[:,0] <= q0_split[1])\n",
     "    ccw_mask = ((points[:,1] >= points[:,0]) & \n",
-    "                  (points[:,1] <= points[:,0] + torch.pi)) #| ((points[:,1] >= points[:,0] - 2*torch.pi) &\n",
-    "                  #(points[:,1] <= points[:,0] - torch.pi))\n",
+    "                  (points[:,1] <= points[:,0] + torch.pi))\n",
     "    \n",
     "    # Mask to retrieve only the clockwise points\n",
     "    cw_mask = ((points[:,1] >= points[:,0] - torch.pi) & (points[:,1] <= points[:,0]))\n",
@@ -120,9 +119,9 @@
     "    \n",
     "   plt.figure(figsize=(6, 6))\n",
     "   plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
-    "   plt.title('Scatter Plot of q1 vs q2')\n",
-    "   plt.xlabel('q1')\n",
-    "   plt.ylabel('q2')\n",
+    "   plt.title('Scatter Plot of q0 vs q1')\n",
+    "   plt.xlabel('q0')\n",
+    "   plt.ylabel('q1')\n",
     "   plt.xlim(-2*torch.pi, 2*torch.pi)\n",
     "   plt.ylim(-2*torch.pi, 2*torch.pi)\n",
     "   plt.grid(True)\n",
@@ -289,7 +288,7 @@
     "#model.load_state_dict(torch.load(load_path, weights_only=True))\n",
     "\n",
     "\n",
-    "def train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
+    "def train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
     "\n",
     "    \"\"\"\n",
     "    Executes training loop for Autoencoder\n",
@@ -325,8 +324,8 @@
     "    nn_filename = dir_name + \"_\" + str(file_counter) + \".pth\"\n",
     "    nn_filepath = os.path.join(dir_path, nn_filename)\n",
     "\n",
-    "    metadata = {\"q1_low\" : q1_split[0],\n",
-    "                \"q1_high\" : q1_split[1],\n",
+    "    metadata = {\"q0_low\" : q0_split[0],\n",
+    "                \"q0_high\" : q0_split[1],\n",
     "                \"lr\" : lr,\n",
     "                \"epochs\" : num_epochs,\n",
     "                \"file_name\" : nn_filename,\n",
@@ -681,12 +680,12 @@
     "      - ccw_mask[i] is True if the i-th configuration is elbow counterclockwise.\n",
     "    \n",
     "    The logic is as follows (from your original function):\n",
-    "      If q2 lies between q1 and q1+π, or between q1-2π and q1-π, then the configuration\n",
+    "      If q1 lies between q0 and q0+π, or between q0-2π and q0-π, then the configuration\n",
     "      is considered counterclockwise. Otherwise it is clockwise.\n",
     "    \"\"\"\n",
-    "    q1 = q[:, 0]\n",
-    "    q2 = q[:, 1]\n",
-    "    cond_ccw = ((q2 >= q1) & (q2 <= q1 + torch.pi))\n",
+    "    q0 = q[:, 0]\n",
+    "    q1 = q[:, 1]\n",
+    "    cond_ccw = ((q1 >= q0) & (q1 <= q0 + torch.pi))\n",
     "    cw_mask = ~cond_ccw\n",
     "    ccw_mask = cond_ccw\n",
     "    return cw_mask, ccw_mask\n",
@@ -695,16 +694,16 @@
     "# Define the number of grid points along each dimension.\n",
     "n_points = 200\n",
     "\n",
-    "# Create 1D tensors for q1 and q2 in the range [-pi, 0]\n",
-    "q1_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
-    "q2_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
+    "# Create 1D tensors for q0 and q1 in the range [-pi, 0]\n",
+    "q0_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "q1_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
     "\n",
     "# Create a 2D grid (meshgrid) of q values.\n",
-    "# (Note: using indexing='ij' so that the first axis corresponds to q1 and the second to q2)\n",
-    "q1_grid, q2_grid = torch.meshgrid(q1_vals, q2_vals, indexing='ij')\n",
+    "# (Note: using indexing='ij' so that the first axis corresponds to q0 and the second to q1)\n",
+    "q0_grid, q1_grid = torch.meshgrid(q0_vals, q1_vals, indexing='ij')\n",
     "\n",
     "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
-    "q_grid = torch.stack([q1_grid.flatten(), q2_grid.flatten()], dim=1).to(device)\n",
+    "q_grid = torch.stack([q0_grid.flatten(), q1_grid.flatten()], dim=1).to(device)\n",
     "\n",
     "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
     "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
@@ -720,10 +719,10 @@
     "    theta_out = model.encoder_vmap(q_grid)\n",
     "    #theta_out = torch.vmap(model.encoder)(q_grid)\n",
     "\n",
-    "    theta1 = theta_out[:, 0]\n",
-    "    theta2 = theta_out[:, 1]\n",
+    "    theta0 = theta_out[:, 0]\n",
+    "    theta1 = theta_out[:, 1]\n",
     "\n",
-    "    # Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
+    "    # Since q0_grid and q1_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
     "    x_end = rp[\"l1\"] * torch.cos(q_grid[:, 0]) + rp[\"l2\"] * torch.cos(q_grid[:, 1])\n",
     "    y_end = rp[\"l1\"] * torch.sin(q_grid[:, 0]) + rp[\"l2\"] * torch.sin(q_grid[:, 1])\n",
     "\n",
@@ -732,9 +731,9 @@
     "    # Counterclockwise points\n",
     "    x_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
     "    y_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "    theta0_ccw  = theta0[ccw_mask].detach().cpu().numpy()\n",
     "    theta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
-    "    theta2_ccw  = theta2[ccw_mask].detach().cpu().numpy()\n",
-    "    thetas = [theta1_ccw, theta2_ccw]\n",
+    "    thetas = [theta0_ccw, theta1_ccw]\n",
     "\n",
     "\n",
     "    for j in range(2):\n",
