--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -15,7 +15,7 @@
     "if module_path not in sys.path:\n",
     "    sys.path.insert(0, module_path)\n",
     "\n",
-    "import Learning.autoencoders as autoencoders\n",
+    "import Double_Pendulum.Learning.autoencoders as autoencoders\n",
     "import Double_Pendulum.robot_parameters as robot_parameters\n",
     "import Double_Pendulum.dynamics as dynamics\n",
     "import Double_Pendulum.transforms as transforms\n",
