--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -10,9 +10,9 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.insert(0, module_path)"
+    "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
+    "for item in sys.path:\n",
+    "    print(item)\n"
    ]
   },
   {
@@ -29,7 +29,6 @@
     "from torch.utils.data import TensorDataset, Dataset, DataLoader\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import os\n",
     "from datetime import datetime\n",
     "import time\n",
     "import json\n",
@@ -59,7 +58,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)\n",
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "rp['m1'] = 0.0\n",
+    "rp[\"m0\"] = 0.0\n",
     "print(rp)\n",
     "\n",
     "train_clockwise = False"
