--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -21,7 +21,7 @@
     "    sys.path.insert(0, module_path)\n",
     "print(sys.path)\n",
     "\n",
-    "import Learning.autoencoders as autoencoders\n",
+    "import Double_Pendulum.Learning.autoencoders as autoencoders\n",
     "import Double_Pendulum.robot_parameters as robot_parameters\n",
     "import Double_Pendulum.transforms as transforms\n",
     "import Double_Pendulum.dynamics as dynamics\n",
