--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_start = torch.tensor([0., -1.1]).requires_grad_().to(device)\n",
+    "xy_start = torch.tensor([1., -4.]).requires_grad_().to(device)\n",
     "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
@@ -140,13 +140,13 @@
     "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
     "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "q_est_series, q_d_est_series, q_dd_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_est_series, q_d_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "u_series = torch.empty((0,1)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 5\n",
+    "t_end = 1.5\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
@@ -155,7 +155,6 @@
     "\n",
     "q_est = model.decoder(th_start, clockwise=is_clockwise_start)\n",
     "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
-    "q_dd_est = torch.zeros((1,2))\n",
     "\n",
     "q_real, q_d_real, q_dd_real = q_start, q_d_start, q_dd_start\n",
     "\n",
@@ -219,20 +218,19 @@
     "    A_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
     "\n",
     "    tau_q_real = A_q_real * u\n",
-    "\n",
     "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
     "    q_d_real = q_d_real + q_dd_real * dt\n",
     "    q_real = q_real + q_d_real * dt\n",
     "    q_real = transforms.wrap_to_pi(q_real)\n",
     "    \n",
-    "\n",
+    "    \n",
     "    q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
     "    th = model.encoder_vmap(q_real_shifted)\n",
+    "    #print(q_real)\n",
     "    q_est = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
     "    q_est = transforms.wrap_to_pi(q_est)\n",
     "    th_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
     "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
-    "    q_dd_est = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Implement with Jacobian derivative\n",
     "\n",
     "\n",
     "    \"\"\" Store data for plotting \"\"\"\n",
@@ -247,7 +245,6 @@
     "\n",
     "    q_est_series = torch.cat((q_est_series, q_est.detach()), dim=0)\n",
     "    q_d_est_series = torch.cat((q_d_est_series, q_d_est.detach()), dim=0)\n",
-    "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est.detach()), dim=0) \n",
     "\n",
     "    u_series = torch.cat((u_series, u.detach()), dim=0)\n",
     "\n",
@@ -320,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stride = 5\n",
+    "stride = 1\n",
     "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
     "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
     "#pos_end_q_naive, pos_elbow_q_naive = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_naive_series[::stride])\n",
