Update plotting functions

--- a/Kian_code/Two_Block/two_block_sim.ipynb
+++ b/Kian_code/Two_Block/two_block_sim.ipynb
@@ -235,39 +235,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_double_vs_time(double_list, dt, ylabel, title):\n",
-    "    time = torch.arange(0, double_list.shape[0] * dt, dt).numpy()\n",
-    "    double_np = double_list.numpy()\n",
+    "def plot_single_vs_time(single_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "    time = torch.linspace(0, (single_list.shape[0] - 1) * dt, single_list.shape[0]).numpy()\n",
+    "    single_np = single_list.cpu().numpy()\n",
     "\n",
     "    plt.figure(figsize=(7, 3))\n",
-    "    plt.plot(time, double_np[:, 0], label=\"θ̇0\")\n",
-    "    plt.plot(time, double_np[:, 1], label=\"θ̇1\")\n",
+    "    plt.plot(time, single_np, label=ylabel)\n",
     "    plt.xlabel(\"Time (s)\")\n",
     "    plt.ylabel(ylabel)\n",
     "    plt.title(title)\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_single_vs_time(single_list, dt):\n",
-    "    time = torch.arange(0, single_list.size(0) * dt, dt).numpy()\n",
-    "    single_np = single_list.numpy()\n",
-    "\n",
-    "    plt.figure(figsize=(7, 3))\n",
-    "    plt.plot(time, single_np, label=\"u\")\n",
-    "    plt.xlabel(\"Time (s)\")\n",
-    "    plt.ylabel(\"Control Input (N)\")\n",
-    "    plt.title(\"Control Input vs Time\")\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    #plt.yscale(\"log\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "def plot_quad_vs_time(quad_list, dt, ylabel, title):\n",
-    "    time = torch.arange(0, quad_list.shape[0] * dt, dt).numpy()\n",
-    "    quad_np = quad_list.numpy()\n",
+    "def plot_double_vs_time(double_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "    time = torch.linspace(0, (double_list.shape[0] - 1) * dt, double_list.shape[0]).numpy()\n",
+    "    double_np = double_list.cpu().numpy()\n",
+    "\n",
+    "    plt.figure(figsize=(7, 3))\n",
+    "    plt.plot(time, double_np[:, 0], label=ylabel+\"0\")\n",
+    "    plt.plot(time, double_np[:, 1], label=ylabel+\"1\")\n",
+    "    plt.xlabel(\"Time (s)\")\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_quad_vs_time(quad_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "    time = torch.linspace(0, (quad_list.shape[0] - 1) * dt, quad_list.shape[0]).numpy()\n",
+    "    quad_np = quad_list.cpu().numpy()\n",
+    "    \n",
     "\n",
     "    plt.figure(figsize=(7, 3))\n",
     "    plt.plot(time, quad_np[:, 0], label=\"Y\")\n",
@@ -356,11 +365,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_double_vs_time(th_list, dt, \"Position (m)\", \"Block Position vs Time\")\n",
-    "plot_double_vs_time(th_d_list, dt, \"Velocity (m/s)\", \"Block Velocities vs Time\")\n",
-    "plot_single_vs_time(u_list, dt)\n",
-    "plot_quad_vs_time(Y_list, dt, \"Y\", \"Y vs Time\")\n",
-    "plot_quad_vs_time(Y_des_list, dt, \"Y_des\", \"Y_des vs Time\")\n"
+    "#plot_double_vs_time(th_list, dt, \"Position (m)\", \"Block Position vs Time\")\n",
+    "#plot_double_vs_time(th_d_list, dt, \"Velocity (m/s)\", \"Block Velocities vs Time\")\n",
+    "#plot_single_vs_time(u_list, dt)\n",
+    "#plot_quad_vs_time(Y_list, dt, \"Y\", \"Y vs Time\")\n",
+    "#plot_quad_vs_time(Y_des_list, dt, \"Y_des\", \"Y_des vs Time\")\n",
+    "\n",
+    "plot_double_vs_time(th_list.detach()[:1000], dt, \"Position (m)\", \"Block Position vs Time\", (-2, 6))\n",
+    "#plot_double_vs_time(th_d_list, dt, \"Velocity (m/s)\", \"Block Velocities vs Time\", (-2, 6))\n",
+    "plot_quad_vs_time(Y_list.detach()[:1000], dt, \"Y\",  \"Y vs Time\", (-3, 3))\n",
+    "plot_single_vs_time(v_list.detach()[:1000], dt, \"v input\", \"v Input vs Time\")\n",
+    "#plot_single_vs_time(u_list, dt, \"Control input (N)\", \"Control Input vs Time\")\n"
+   ]
+  },
    ]
   },
   {
