Use normal_form file for calculations

--- a/Kian_code/Two_Block/two_block_sim.ipynb
+++ b/Kian_code/Two_Block/two_block_sim.ipynb
@@ -130,6 +130,15 @@
    "source": [
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
+    "import os, sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.insert(0, module_path)\n",
+    "import Double_Pendulum.normal_form as normal_form\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "# Basic parameters of the simulation\n",
     "rp_b = {\n",
@@ -152,10 +161,13 @@
     "    \"\"\"\n",
     "\n",
     "    M = torch.tensor([[rp_b[\"m0\"], 0],\n",
-    "                      [0, rp_b[\"m1\"]]])\n",
+    "                      [0, rp_b[\"m1\"]]]).requires_grad_()\n",
     "\n",
-    "    G = torch.tensor([[ rp_b[\"k\"]*(th[0] - (th[1] - 1))],\n",
-    "                      [-rp_b[\"k\"]*(th[0] - (th[1] - 1))]])\n",
+    "    G = torch.stack([rp_b[\"k\"]*(th[0] - (th[1] - 1)),\n",
+    "                    -rp_b[\"k\"]*(th[0] - (th[1] - 1))], dim = 0).unsqueeze(1)\n",
+    "    \n",
+    "    #G = torch.tensor([[ rp_b[\"k\"]*(th[0] - (th[1] - 1))],\n",
+    "    #                  [-rp_b[\"k\"]*(th[0] - (th[1] - 1))]]).requires_grad_()\n",
     "    \n",
     "    return M, G\n",
     "\n",
@@ -286,6 +298,10 @@
     "    plt.xlabel(\"Time (s)\")\n",
     "    plt.ylabel(ylabel)\n",
     "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(ylim)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.tight_layout()\n",
@@ -309,7 +325,9 @@
     "th_des = torch.tensor([[3., 5.]])\n",
     "th_d_des = torch.tensor([[0., 0.]])\n",
     "\n",
-    "Y_des_u = calculate_Y(rp_b, th_des.squeeze(0), th_d_des.squeeze(0))\n",
+    "M_th_des, G_th_des = dynamical_matrices(rp_b, th_des.squeeze(0))\n",
+    "M_th_des = M_th_des * th_des / th_des\n",
+    "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, G_th_des, device)\n",
     "Y_des = torch.tensor([[Y_des_u[0,0]], [0.], [0.], [0.]])\n",
     "print(\"Y_des_u:\", Y_des_u)\n",
     "print(\"Y_des:\", Y_des)"
@@ -321,8 +339,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "M_th_start, G_th_start = dynamical_matrices(rp_b, th_start.squeeze(0))\n",
+    "M_th_start = M_th_start * th_start / th_start\n",
+    "Y_start = normal_form.calculate_Y(th_start, th_d_start, M_th_start, G_th_start, device)\n",
+    "print(Y_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "t_start = 0.\n",
-    "t_end = 40\n",
+    "t_end = 5\n",
     "dt = 0.01\n",
     "\n",
     "th = th_start\n",
@@ -331,21 +361,23 @@
     "th_list = torch.empty((0, 2))\n",
     "th_d_list = torch.empty((0, 2))\n",
     "u_list = torch.empty((0))\n",
+    "v_list = torch.empty((0))\n",
     "Y_list = torch.empty((0, 4))\n",
     "Y_des_list = torch.empty((0, 4))\n",
     "\n",
     "for t in torch.arange(t_start, t_end, dt):\n",
-    "    #print(\"t:\", t.item())\n",
+    "    print(\"t:\", t.item())\n",
     "    \n",
     "    M, G = dynamical_matrices(rp_b, th.squeeze(0))\n",
+    "    M = M * th / th\n",
+    "    \n",
     "    A = input_matrix()\n",
     "\n",
-    "    Y = calculate_Y(rp_b, th.squeeze(0), th_d.squeeze(0))\n",
-    "    alpha, beta = calculate_alpha_beta(rp_b, th.squeeze(0), th_d.squeeze(0))\n",
-    "    v = calculate_v(Y, Y_des, K)\n",
-    "    u = calculate_u(alpha, beta, v)\n",
-    "    #gravity_compesnation = \n",
-    "    #u = u + tau_e (gravity compensation)\n",
+    "    Y = normal_form.calculate_Y(th, th_d, M, G, device)\n",
+    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M, G, A, Y)\n",
+    "\n",
+    "    v = normal_form.calculate_v(Y, Y_des, K)\n",
+    "    u = normal_form.calculate_u(alpha, beta, v)\n",
     "\n",
     "    th_dd = torch.pinverse(M) @ (A * u - G).squeeze(1)\n",
     "    th_d = th_d + th_dd * dt\n",
@@ -354,9 +386,9 @@
     "    th_list = torch.concatenate((th_list, th))\n",
     "    th_d_list = torch.concatenate((th_d_list, th_d))\n",
     "    u_list = torch.concatenate((u_list, u))\n",
+    "    v_list = torch.concatenate((v_list, v))\n",
     "    Y_list = torch.concatenate((Y_list, Y.T))\n",
-    "    Y_des_list = torch.concatenate((Y_des_list, Y_des.T))\n",
-    "\n"
+    "    Y_des_list = torch.concatenate((Y_des_list, Y_des.T))"
    ]
   },
   {
@@ -377,15 +409,6 @@
     "plot_single_vs_time(v_list.detach()[:1000], dt, \"v input\", \"v Input vs Time\")\n",
     "#plot_single_vs_time(u_list, dt, \"Control input (N)\", \"Control Input vs Time\")\n"
    ]
-  },
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
