Add check for stable gains

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -109,7 +109,9 @@
    "outputs": [],
    "source": [
     "K = torch.tensor([[1., 10., 10., 10.]]).to(device)\n",
-    "k_spring = 0.5"
+    "k_spring = 0.5\n",
+    "if normal_form.check_stable_gains(K):\n",
+    "    print(\"Gains are stable\")"
    ]
   },
   {
@@ -125,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# THE FOLLOWING COORDINATES RESULT IN STABLE Y_DES FOR k_spring = 0.5\n",
     "xy_des_real = torch.tensor([1.9218631, -2.5156569]).requires_grad_().to(device)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
