Edit des and start calcs

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -170,10 +170,12 @@
     "\n",
     "M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_hat_des.squeeze(0), q_d_hat_des.squeeze(0))\n",
     "G_q_des = dynamics.add_spring_force_G_q(rp, q_hat_des, G_q_des, k_spring)\n",
+    "A_q_des = dynamics.input_matrix(rp, q_des.squeeze(0))\n",
     "\n",
     "_, _, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
     "M_th_des = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "M_th_des = M_th_des * th_des/th_des\n",
+    "A_th_des = transforms.transform_input_matrix_from_inverse_trans(A_q_des, J_h_inv_trans_des)\n",
     "\n",
     "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, G_th_des, device)\n",
     "Y_des = torch.tensor([[Y_des_u[0,0]], [0], [0], [0]]).to(device)\n",
@@ -199,7 +201,7 @@
    "outputs": [],
    "source": [
     "#xy_start = torch.tensor([2, -1.9]).requires_grad_().to(device)\n",
-    "xy_start = xy_des_real * 1.01\n",
+    "xy_start = xy_des_real * 1.001\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
@@ -243,7 +245,14 @@
     "A_th_start = transforms.transform_input_matrix_from_inverse_trans(A_q_start, J_h_inv_trans_start)\n",
     "\n",
     "Y_start = normal_form.calculate_Y(th_start, th_d_start, M_th_start, G_th_start, device)\n",
+    "v_start = normal_form.calculate_v(Y_start, Y_des, K)\n",
     "alpha_start, beta_start = normal_form.calculate_alpha_beta(th_start, th_d_start, M_th_start, G_th_start, A_th_start, Y_start)\n",
+    "u_start = normal_form.calculate_u(alpha_start, beta_start, v_start)\n",
+    "y_iv_start = normal_form.calculate_y_iv(alpha_start, beta_start, u_start)\n",
+    "\n",
+    "print(\"v_start:\", v_start)\n",
+    "print(\"u_start:\", u_start)\n",
+    "print(\"yiv_start:\", y_iv_start)\n",
     "\n",
     "print(\"M_th start:\\n\", M_th_start)\n",
     "print(\"G_th start:\\n\", G_th_start)\n",
