Log alpha_beta series

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -281,6 +281,7 @@
     "Y_series_thsim = torch.empty((0,4)).to(device)\n",
     "v_series_thsim = torch.empty((0,1)).to(device)\n",
     "u_series_thsim = torch.empty((0,1)).to(device)\n",
+    "alpha_beta_series_thsim = torch.empty((0,2)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
@@ -380,6 +381,7 @@
     "    v_series_thsim = torch.cat((v_series_thsim, v.detach()), dim=0)\n",
     "    u_series_thsim = torch.cat((u_series_thsim, u.detach()), dim=0)\n",
     "    Y_series_thsim = torch.cat((Y_series_thsim, Y.detach().T))\n",
+    "    alpha_beta_series_thsim = torch.cat((alpha_beta_series_thsim, torch.tensor([[alpha, beta]]).to(device)))\n",
     "    #print(\"\")\n",
     "\n",
     "    if torch.isnan(th[0,0]):\n",
