Minor changes to simulation loop

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 5\n",
+    "t_end = 10\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
@@ -315,39 +315,34 @@
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
     "    _, _, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "    M_th = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
+    "    M_th = torch.tensor([[rp[\"m1\"], 0.], \n",
+    "                         [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "    M_th = M_th * th/th\n",
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "    #A_th = torch.tensor([[1], [0]]).to(device)\n",
     "\n",
     "    Y = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
     "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
     "\n",
-    "\n",
-    "\n",
-    "    #print(\"alpha:\", alpha)\n",
-    "    #print(\"beta:\", beta)\n",
     "    v = normal_form.calculate_v(Y, Y_des, K)\n",
     "    u = normal_form.calculate_u(alpha, beta, v)\n",
-    "    #print(\"Y:\", Y)\n",
     "\n",
-    "    #print(\"u:\", u)\n",
-    "    if t == 0:\n",
+    "    if True:\n",
     "        print(\"t: t\")\n",
-    "        print(\"th:\", th)\n",
+    "        print(\"q_hat:\", q_hat[0,0].item(), q_hat[0,1].item())\n",
+    "        print(\"th:\", th[0,0].item(), th[0,1].item())\n",
+    "        print(\"th_d:\", th_d[0,0].item(), th_d[0,1].item())\n",
     "        print(\"Y:\", Y)\n",
-    "        #print(\"Y_des:\", Y_des)\n",
     "        print(\"v:\", v.item())\n",
     "        print(\"u:\", u.item())\n",
     "        print(\"\\n\")\n",
     "\n",
-    "    \"\"\" Recalculate \"real system\" based on modified matrices in theta-space. \"\"\"\n",
     "\n",
     "\n",
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
     "    \n",
-    "\n",
     "    tau_th = A_th * u\n",
     "    th_dd = (torch.pinverse(M_th) @ (tau_th - G_th)).T\n",
     "    th_d = th_d + th_dd * dt\n",
@@ -365,8 +360,6 @@
     "    q_est = model.decoder_vmap(th, clockwise=is_clockwise)\n",
     "    q_est = transforms.wrap_to_pi(q_est)\n",
     "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "    \"\"\" Store data for plotting \"\"\"\n",
