Add sim in q-space

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -388,6 +388,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Sim in q-space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "\n",
+    "th_series_qsim, th_d_series_qsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_series_qsim, q_d_series_qsim, q_dd_series_qsim = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "Y_series_qsim = torch.empty((0,4)).to(device)\n",
+    "v_series_qsim = torch.empty((0,1)).to(device)\n",
+    "u_series_qsim = torch.empty((0,1)).to(device)\n",
+    "alpha_beta_series_qsim = torch.empty((0,2)).to(device)\n",
+    "\n",
+    "\n",
+    "dt = 0.01\n",
+    "t_end = 5\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
+    "\n",
+    "q_real = q_start\n",
+    "q_d_real = q_d_start\n",
+    "\n",
+    "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
+    "fix_q = True\n",
+    "model_shifting = True\n",
+    "\n",
+    "for t in torch.arange(0, t_end, dt):\n",
+    "    t_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "    print(t_string, end='\\r', flush=True)\n",
+    "\n",
+    "    is_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
+    "    if fix_q and model_cw != is_clockwise:\n",
+    "        print(\"fixing value to\", \"clockwise\" if model_cw else \"counterclockwise\")\n",
+    "        q = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
+    "        q_d = transforms.flip_q_d(rp, q_real.squeeze(0), q_d_real, model_cw)\n",
+    "    else:\n",
+    "        q = q_real\n",
+    "        q_d = q_d_real\n",
+    "\n",
+    "    if model_shifting:\n",
+    "        q = transforms.shift_q(q, clockwise=model_cw)\n",
+    "    th = model.encoder_vmap(q)\n",
+    "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "    \n",
+    "    q = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "    q_d = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "    \n",
+    "    \"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "    \n",
+    "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\n",
+    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "    G_q_est = dynamics.add_spring_force_G_q(rp, q, G_q_est, k_spring)\n",
+    "    A_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "\n",
+    "    _, _, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "    M_th = torch.tensor([[rp[\"m1\"], 0.], \n",
+    "                         [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
+    "    M_th = M_th * th/th\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "    A_th = torch.tensor([[1], [0]]).to(device)\n",
+    "\n",
+    "    Y = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
+    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
+    "\n",
+    "    v = normal_form.calculate_v(Y, Y_des, K)\n",
+    "    u = normal_form.calculate_u(alpha, beta, v)\n",
+    "    #y_iv = normal_form.calculate_y_iv(alpha, beta, u)\n",
+    "    #print(\"y_iv:\", y_iv.item())\n",
+    "\n",
+    "    if True:\n",
+    "        print(\"t: t\")\n",
+    "        print(\"q_est:\", q[0,0].item(), q[0,1].item())\n",
+    "        print(\"th:\", th[0,0].item(), th[0,1].item())\n",
+    "        print(\"th_d:\", th_d[0,0].item(), th_d[0,1].item())\n",
+    "        print(\"Y:\", Y)\n",
+    "        #print(\"Y_des:\", Y_des)\n",
+    "        print(\"v:\", v.item())\n",
+    "        print(\"u:\", u.item())\n",
+    "        print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
+    "\n",
+    "    \n",
+    "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
+    "    G_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring)\n",
+    "    A_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
+    "\n",
+    "    tau_q_real = A_q_real * u\n",
+    "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "    q_d_real = q_d_real + q_dd_real * dt\n",
+    "    q_real = q_real + q_d_real * dt\n",
+    "    q_real = transforms.wrap_to_pi(q_real)\n",
+    "\n",
+    "    #q_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
+    "    th = model.encoder_vmap(q_real)#_shifted)\n",
+    "    q_est = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
+    "    q_est = transforms.wrap_to_pi(q_est)\n",
+    "    th_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
+    "    q_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
+    "\n",
+    "    \"\"\" Store data for plotting \"\"\"\n",
+    "\n",
+    "    th_series_qsim = torch.cat((th_series_qsim, th.detach()), dim=0)\n",
+    "    th_d_series_qsim = torch.cat((th_d_series_qsim, th_d.detach()), dim=0)\n",
+    "\n",
+    "    q_series_qsim = torch.cat((q_series_qsim, q_est.detach()), dim=0)\n",
+    "    q_d_series_qsim = torch.cat((q_d_series_qsim, q_d_est.detach()), dim=0)\n",
+    "\n",
+    "    v_series_qsim = torch.cat((v_series_qsim, v.detach()), dim=0)\n",
+    "    u_series_qsim = torch.cat((u_series_qsim, u.detach()), dim=0)\n",
+    "    Y_series_qsim = torch.cat((Y_series_qsim, Y.detach().T))\n",
+    "    alpha_beta_series_qsim = torch.cat((alpha_beta_series_qsim, torch.tensor([[alpha, beta]]).to(device)))\n",
+    "    #print(\"\")\n",
+    "\n",
+    "    if torch.isnan(th[0,0]):\n",
+    "        break\n",
+    "\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sim in Y-space"
    ]
   },
