Minor changes to Y_sim loop

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -530,12 +530,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "Y_series_Ysim = torch.empty((0,4)).to(device)\n",
     "v_series_Ysim = torch.empty((0,1)).to(device)\n",
     "\n",
     "Y = normal_form.calculate_Y(th_start, th_d_start, M_th_start, G_th_start, device)\n",
     "#print(Y)\n",
-    "t_end = 10.\n",
+    "t_end = 30.\n",
     "dt = 0.01\n",
     "\n",
     "Y_A = torch.tensor([[0., 1., 0., 0.],\n",
@@ -548,10 +550,10 @@
     "\n",
     "\n",
     "for t in torch.arange(0, t_end, dt):\n",
+    "    print(\"t:\", t.item())\n",
     "    v = normal_form.calculate_v(Y, Y_des, K)\n",
     "\n",
     "    Y_series_Ysim = torch.cat((Y_series_Ysim, Y.detach().T))\n",
-    "\n",
     "    Y_dot = Y_A @ Y + Y_B * v\n",
     "    Y = Y + Y_dot * dt\n",
     "    \n",
