--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -569,18 +569,32 @@
    "source": [
     "show_thsim = True\n",
     "show_Ysim = True\n",
+    "show_diff = True\n",
     "\n",
     "if show_thsim:\n",
-    "    plot_quad_vs_time(Y_series_thsim[:50], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-3, 3))\n",
-    "    plot_single_vs_time(v_series_thsim[:50], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-10, 10))\n",
-    "    #plot_single_vs_time(u_series_thsim[:50], dt, \"u_thsim\", \"u_thsim vs time\")\n",
-    "    plot_double_vs_time(th_series_thsim[:50], dt, \"th_thsim\", \"th_thsim vs time\", (-2, 10))\n",
-    "    #plot_double_vs_time(q_series_thsim[:50], dt, \"q_thsim\", \"q_thsim vs time\")\n",
+    "    plot_quad_vs_time(Y_series_thsim[:175], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(1.5, 1.6))\n",
+    "    plot_quad_vs_time(Y_series_thsim[:175], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-0.1, 0.1))\n",
+    "    #plot_single_vs_time(v_series_thsim[:175], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-0.1, 0.2))\n",
+    "    #plot_single_vs_time(u_series_thsim[:175], dt, \"u_thsim\", \"u_thsim vs time\", ylim=(-50, 50))\n",
+    "    \n",
+    "    #plot_double_vs_time(th_series_thsim[:175], dt, \"th_thsim\", \"th_thsim vs time\")#, (1.5, 1.6))\n",
+    "    #plot_double_vs_time(th_d_series_thsim[:175], dt, \"th_d_thsim\", \"th_d_thsim vs time\", (-2, 2))\n",
+    "    #plot_double_vs_time(th_dd_series_thsim[:175], dt, \"th_dd_thsim\", \"th_dd_thsim vs time\", (-10, 2))\n",
+    "    \n",
+    "    #plot_single_vs_time(alpha_beta_series_thsim[:200, 0], dt, \"alpha\", \"alpha vs time\", (-2, 10))\n",
+    "    #plot_single_vs_time(alpha_beta_series_thsim[:200, 1], dt, \"beta\", \"beta vs time\", (0.07, 0.14))\n",
+    "\n",
+    "\n",
     "\n",
     "if show_Ysim:\n",
-    "    plot_quad_vs_time(Y_series_Ysim[:50], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-3, 3))\n",
-    "    plot_single_vs_time(v_series_Ysim[:50], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-10, 10))\n",
-    "\n"
+    "    plot_quad_vs_time(Y_series_Ysim[:175], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(1.5, 1.6))\n",
+    "    plot_quad_vs_time(Y_series_Ysim[:175], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-0.1, 0.1))\n",
+    "    plot_single_vs_time(v_series_Ysim[:175], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-0.1, 0.2))\n",
+    "    pass\n",
+    "\n",
+    "if show_diff:\n",
+    "    plot_quad_vs_time(Y_series_thsim[:175] - Y_series_Ysim[:175], dt, \"Y_diff\", \"Y_diff vs time\", ylim=(-0.002, 0.002))\n",
+    "    plot_single_vs_time(v_series_thsim[:175] - v_series_Ysim[:175], dt, \"v_diff\", \"v_diff vs time\")#, ylim=(-0.1, 0.2))\n"
    ]
   },
   {
