Move plotter of Y vs theta0, include G_1 plot

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -601,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Calculate Y as a function of $\\theta_0$"
+    "#### Calculate Y as a function of $\\theta_0$, with $\\theta_1 = \\bar{\\theta}_{1}$"
    ]
   },
   {
@@ -610,12 +610,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_th_min, plot_th_max = -5, 15\n",
+    "plot_th_min, plot_th_max = 1, 9\n",
     "th0_range = torch.linspace(plot_th_min, plot_th_max, 200).unsqueeze(1).to(device)\n",
     "th1_range = (torch.ones(th0_range.size(0)).to(device) * th_des[0, 1]).unsqueeze(1)\n",
     "th_des_range = torch.cat((th0_range, th1_range), dim=1)\n",
     "\n",
     "y_plot_list = torch.empty(4,0).to(device)\n",
+    "G_th_1_list = torch.empty(0).to(device)\n",
     "\n",
     "for th_des_plot in th_des_range:\n",
     "    is_clockwise_des_plot = False\n",
@@ -637,7 +638,15 @@
     "    \n",
     "    Y_des = normal_form.calculate_Y(th_des_plot, th_d_des, M_th_des, G_th_des, device)\n",
     "    y_plot_list = torch.cat((y_plot_list, Y_des), dim = -1)\n",
+    "    G_th_1_list = torch.cat((G_th_1_list, G_th_des[1]))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot the resulting Y as a function of $\\theta_0$"
    ]
   },
   {
@@ -696,6 +705,39 @@
     "#print(\"Intersection points th1 and circle:\", rounded_points)\n",
     "#print(\"Angle (th1) in radians:\", round(angle_radians, 4))\n",
     "#print(\"Distances between intersection points and actuator point:\\n\", distances)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 3))\n",
+    "plt.plot(th0_range.squeeze(0).cpu().numpy(), y_plot_list[0].cpu().numpy(), label=\"y\")\n",
+    "plt.plot(th0_range.squeeze(0).cpu().numpy(), y_plot_list[1].cpu().numpy(), label=\"y'\")\n",
+    "plt.plot(th0_range.squeeze(0).cpu().numpy(), y_plot_list[2].cpu().numpy(), label=\"y''\")\n",
+    "plt.plot(th0_range.squeeze(0).cpu().numpy(), y_plot_list[3].cpu().numpy(), label=\"y'''\")\n",
+    "plt.xlabel(\"th0\")\n",
+    "plt.ylabel(\"value\")\n",
+    "plt.title(\"Y vs th0, for constant th1\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(th0_range.squeeze(0).cpu().numpy(), G_th_1_list.detach().cpu().numpy())\n",
+    "plt.hlines(0, plot_th_min, plot_th_max, colors=\"k\", linestyles=\"--\")\n",
+    "vline_min = torch.min(torch.min((y_plot_list[i]), torch.tensor(-2))).cpu().numpy()\n",
+    "vline_max = torch.max(torch.max((y_plot_list[i]), torch.tensor(2))).cpu().numpy()\n",
+    "plt.vlines(0, vline_min, vline_max, colors=\"k\", linestyles=\"--\")\n",
+    "plt.vlines(short_distance, vline_min, vline_max, colors=\"r\", linestyles=\"--\")\n",
+    "plt.vlines(long_distance, vline_min, vline_max, colors=\"r\", linestyles=\"--\")\n",
+    "\n",
+    "plt.title(\"G1 vs th0, for constant th1\")\n",
+    "plt.xlim(0, 10)    \n",
+    "plt.ylim(-5, 5)\n",
+    "plt.show()"
    ]
   },
   {
